SERVER-16725 Incorrect character conversion between UTF-8 and UTF-16